--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <h3>This is</h3>
         <h1>Skibidi</h1>
         <h4>Your new favorite toilet is now available!</h4>
-        <h4><a href="#">https://skibidi-web.vercel.app/</a></h4>
+        <button><a href="#" class="btn-shop">Shop Now</a></button>
+        <h4 class="website-link"><a href="https://skibidi-web.vercel.app">https://skibidi-web.vercel.app</a></h4>
     </section>
 </body>
 
